--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'color-primary': '#F85559',
                     }
                 }
             }
@@ -30,17 +30,17 @@
 <body>
 
     <header>
-        <div class="container mx-auto">
+        <div class="container mx-auto bg-color-primary my-8 p-5 rounded-full">
 
 
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
+            <div class="navbar flex-row-reverse justify-between lg:flex-row">
+                <div class="navbar-start justify-end lg:justify-start">
                     <div class="dropdown">
                         <label tabindex="0" class="btn btn-ghost btn-circle">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                class="inline-block w-5 h-5 stroke-current">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h7" />
+                                    d="M4 6h16M4 12h16M4 18h16"></path>
                             </svg>
                         </label>
                         <ul tabindex="0"
@@ -51,27 +51,25 @@
                         </ul>
                     </div>
                 </div>
-                <div class="navbar-center">
+                <div class="navbar-center  justify-start lg:justify-center">
                     <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
                 </div>
-                <div class="navbar-end">
-                    <button class="btn btn-ghost btn-circle">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                        </svg>
-                    </button>
-                    <button class="btn btn-ghost btn-circle">
-                        <div class="indicator">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-                            </svg>
-                            <span class="badge badge-xs badge-primary indicator-item"></span>
+
+                <div class="navbar-end hidden lg:block lg:justify-end lg:text-right">
+
+                    <div class="form-control">
+                        <div class="input-group justify-end">
+                            <input type="text" placeholder="Search here" class="input border-t border-l border-b border-r-0 border-color-primary focus:border-0 focus:outline-none focus:border-t focus:border-l focus:border-b focus:border-r-0 nav-search-input-custom-style"/>
+                            <button class="btn bg-white border-t border-r border-b border-l-0 border-color-primary hover:bg-white hover:border-t hover:border-r hover:border-b hover:border-l-0 hover:border-color-primary nav-search-icon-custom-style">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                                </svg>
+                            </button>
                         </div>
-                    </button>
+                    </div>
+
                 </div>
             </div>
 
@@ -83,6 +81,8 @@
     <main>
         <section>
             <div class="container mx-auto">
+
+                <div class="h-full"></div>
 
             </div>
         </section>
