--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 
+    <!-- Lato Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+
+
     <!-- Tailwind custom class  -->
     <script>
         tailwind.config = {
@@ -31,35 +37,46 @@
 
     <header>
         <div class="container mx-auto bg-color-primary my-8 p-5 rounded-full">
-
-
             <div class="navbar flex-row-reverse justify-between lg:flex-row">
                 <div class="navbar-start justify-end lg:justify-start">
-                    <div class="dropdown">
-                        <label tabindex="0" class="btn btn-ghost btn-circle">
+                    <div class="hidden lg:block">
+                        <ul class="flex gap-6">
+                            <li><a class="text-lg text-white font-medium" href="#">Home</a></li>
+                            <li><a class="text-lg text-white font-medium" href="#">About Us</a></li>
+                            <li><a class="text-lg text-white font-medium" href="#">Shop</a></li>
+                            <li><a class="text-lg text-white font-medium" href="#">All Fruits</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown lg:hidden block">
+                        <label tabindex="0" class="btn btn-ghost btn-circle text-white text-2xl">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                class="inline-block w-5 h-5 stroke-current">
+                                class="inline-block w-8 h-8 stroke-current">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M4 6h16M4 12h16M4 18h16"></path>
                             </svg>
                         </label>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                            <li><a>Homepage</a></li>
-                            <li><a>Portfolio</a></li>
-                            <li><a>About</a></li>
+                        <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 bg-color-primary rounded-t-none rounded-b-lg w-52">
+                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5" href="#">Home</a></li>
+                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5" href="#">About Us</a></li>
+                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5" href="#">Shop</a></li>
+                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5" href="#">All Fruits</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="navbar-center  justify-start lg:justify-center">
-                    <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+
+                <div class="navbar-center justify-start lg:justify-center">
+                    <div>
+                        <img src="./images/logo.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="ml-4 text-4xl text-white font-bold">Fruit Burst</h1>
+                    </div>
                 </div>
 
                 <div class="navbar-end hidden lg:block lg:justify-end lg:text-right">
-
                     <div class="form-control">
                         <div class="input-group justify-end">
-                            <input type="text" placeholder="Search here" class="input border-t border-l border-b border-r-0 border-color-primary focus:border-0 focus:outline-none focus:border-t focus:border-l focus:border-b focus:border-r-0 nav-search-input-custom-style"/>
+                            <input type="text" placeholder="Search here" class="input border-t border-l border-b border-r-0 border-color-primary focus:border-0 focus:outline-none focus:border-t focus:border-l focus:border-b focus:border-r-0 nav-search-input-custom-style" />
                             <button class="btn bg-white border-t border-r border-b border-l-0 border-color-primary hover:bg-white hover:border-t hover:border-r hover:border-b hover:border-l-0 hover:border-color-primary nav-search-icon-custom-style">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
@@ -69,12 +86,8 @@
                             </button>
                         </div>
                     </div>
-
                 </div>
             </div>
-
-
-
         </div>
     </header>
 
