start work on new pc

--- a/index.html
+++ b/index.html
@@ -92,11 +92,19 @@
     </header>
 
     <main>
+        <!-- Banner Section  -->
         <section>
             <div class="container mx-auto">
 
-                <div class="h-full"></div>
+                
 
+            </div>
+        </section>
+
+
+        <section>
+            <div class="container mx-auto">
+                <h1>Hello World</h1>
             </div>
         </section>
     </main>
