--- a/index.html
+++ b/index.html
@@ -104,70 +104,108 @@
         <!-- Banner Section  -->
         <section>
             <div class="container mx-auto flex justify-center items-center text-center">
-
-
                 <div class="carousel w-full">
-
                     <div id="slide1"
                         class="carousel-item relative w-full bg-[url('./images/banner2.png')] bg-cover bg-no-repeat bg-center flex justify-center items-center min-h-[500px] before:content-[' '] before:absolute before:w-full before:h-full before:bg-gradient-to-b before:from-black-rgba-08 before:to-black-rgba-02">
-                            <div class="z-10">
-                                <h1 class="font-Garamond font-extrabold text-4xl lg:text-7xl text-white loading-[5rem]"> Exotic tastes at your <br> doorstep </h1>
-                                <p class="text-xl text-white my-10">We supply highly quality organic products</p>
-                                <a class="btn bg-color-primary border-none text-white hover:text-color-primary px-8 normal-case text-lg" href="#">Shop Now</a>
-                                <div
-                                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                    <a href="#slide3"
-                                        class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❮</a>
-                                    <a href="#slide2"
-                                        class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❯</a>
-                                </div>
+                        <div class="z-10">
+                            <h1 class="font-Garamond font-extrabold text-4xl lg:text-7xl text-white loading-[5rem]">
+                                Exotic tastes at your <br> doorstep </h1>
+                            <p class="text-xl text-white my-10">We supply highly quality organic products</p>
+                            <a class="btn bg-color-primary border-none text-white hover:text-color-primary px-8 normal-case text-lg"
+                                href="#">Shop Now</a>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide3"
+                                    class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❮</a>
+                                <a href="#slide2"
+                                    class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❯</a>
                             </div>
+                        </div>
                     </div>
-                    
+
                     <div id="slide2"
                         class="carousel-item relative w-full bg-[url('./images/banner1.png')] bg-cover bg-no-repeat bg-center flex justify-center items-center min-h-[540px] before:content-[' '] before:absolute before:w-full before:h-full before:bg-gradient-to-b before:from-black-rgba-08 before:to-black-rgba-02">
-                            <div class="z-10">
-                                <h1 class="font-Garamond font-extrabold text-4xl lg:text-7xl text-white loading-[5rem]"> We Sell The Best Fruits! </h1>
-                                <p class="text-xl text-white my-10">We supply highly quality organic products</p>
-                                <a class="btn bg-color-primary border-none text-white hover:text-color-primary px-8 normal-case text-lg" href="#">Shop Now</a>
-                                <div
-                                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                    <a href="#slide1"
-                                        class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❮</a>
-                                    <a href="#slide3"
-                                        class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❯</a>
-                                </div>
+                        <div class="z-10">
+                            <h1 class="font-Garamond font-extrabold text-4xl lg:text-7xl text-white loading-[5rem]"> We
+                                Sell The Best Fruits! </h1>
+                            <p class="text-xl text-white my-10">We supply highly quality organic products</p>
+                            <a class="btn bg-color-primary border-none text-white hover:text-color-primary px-8 normal-case text-lg"
+                                href="#">Shop Now</a>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide1"
+                                    class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❮</a>
+                                <a href="#slide3"
+                                    class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❯</a>
                             </div>
+                        </div>
                     </div>
+
                     <div id="slide3"
                         class="carousel-item relative w-full bg-[url('./images/banner3.png')] bg-cover bg-no-repeat bg-center flex justify-center items-center min-h-[540px] before:content-[' '] before:absolute before:w-full before:h-full before:bg-gradient-to-b before:from-black-rgba-08 before:to-black-rgba-02">
-                            <div class="z-10">
-                                <h1 class="font-Garamond font-extrabold text-4xl lg:text-7xl text-white loading-[5rem]"> Fruit Boxes & Free Delivery </h1>
-                                <p class="text-xl text-white my-10">We supply highly quality organic products</p>
-                                <a class="btn bg-color-primary border-none text-white hover:text-color-primary px-8 normal-case text-lg" href="#">Shop Now</a>
-                                <div
-                                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                    <a href="#slide2"
-                                        class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❮</a>
-                                    <a href="#slide1"
-                                        class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❯</a>
-                                </div>
+                        <div class="z-10">
+                            <h1 class="font-Garamond font-extrabold text-4xl lg:text-7xl text-white loading-[5rem]">
+                                Fruit Boxes & Free Delivery </h1>
+                            <p class="text-xl text-white my-10">We supply highly quality organic products</p>
+                            <a class="btn bg-color-primary border-none text-white hover:text-color-primary px-8 normal-case text-lg"
+                                href="#">Shop Now</a>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide2"
+                                    class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❮</a>
+                                <a href="#slide1"
+                                    class="btn btn-circle bg-black text-white hover:bg-white hover:text-black border-none">❯</a>
                             </div>
+                        </div>
                     </div>
-
                 </div>
-
-
             </div>
         </section>
 
 
-        <!-- Bonus Section  -->
-        <section>
-            <div class="container mx-auto">
-                <h1>Hello World</h1>
+        <!-- Countdown Section  -->
+        <section class="py-20">
+            <div class="container mx-auto flex justify-between items-center flex-col lg:flex-row">
+                <div>
+                    <h1 class="font-Garamond font-extrabold text-4xl lg:text-5xl loading-[5rem] text-[#121212] lg:text-left text-center">Deal of the day</h1>
+                    <p class="text-base my-5 w-3/4 lg:w-2/4 mx-auto lg:mx-0 text-center lg:text-left">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+                <div>
+                    <div class="grid grid-flow-col gap-5 text-center auto-cols-max mt-10 lg:mt-0">
+                        <div class="flex flex-col">
+                            <span class="countdown font-extrabold text-5xl">
+                                <span style="--value:29;"> </span> 
+                                <img class="h-6 ml-4 mt-3" src="./images/dot3.png" alt="">
+                            </span>
+                            <span class="mr-[35px]"> days </span>
+                        </div>
+                        <div class="flex flex-col">
+                            <span class="countdown font-extrabold text-5xl">
+                                <span style="--value:15;"></span>
+                                <img class="h-6 ml-4 mt-3" src="./images/dot3.png" alt="">
+                            </span>
+                            <span class="mr-[35px]"> hours </span>
+                        </div>
+                        <div class="flex flex-col">
+                            <span class="countdown font-extrabold text-5xl">
+                                <span style="--value:25;"></span>
+                                <img class="h-6 ml-4 mt-3" src="./images/dot3.png" alt="">
+                            </span>
+                            <span class="mr-[35px]"> min </span>
+                        </div>
+                        <div class="flex flex-col">
+                            <span class="countdown font-extrabold text-5xl">
+                                <span style="--value:8;"></span>
+                            </span>
+                            <span> sec </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+
+
+        
     </main>
 
     <footer>
