--- a/index.html
+++ b/index.html
@@ -162,11 +162,36 @@
                     </div>
                 </div>
             </div>
+
+            
+            <div class="container mx-auto hidden lg:block">
+                <div class="flex justify-evenly w-10/12 mx-auto bg-white py-16 relative bottom-20">
+                    <div class="text-center">
+                        <img class="inline-block" src="./images/fruit1.png" alt="">
+                        <h4 class="text-xl mt-5">Grapes</h4>
+                    </div>
+                    <div class="text-center">
+                        <img class="inline-block" src="./images/fruit2.png" alt="">
+                        <h4 class="text-xl mt-5">Orange</h4>
+                    </div>
+                    <div class="text-center">
+                        <img class="inline-block" src="./images/fruit3.png" alt="">
+                        <h4 class="text-xl mt-5">Mango</h4>
+                    </div>
+                    <div class="text-center">
+                        <img class="inline-block" src="./images/fruit4.png" alt="">
+                        <h4 class="text-xl mt-5">Strawberry</h4>
+                    </div>
+                    <div class="text-center">
+                        <img class="inline-block" src="./images/fruit5.png" alt="">
+                        <h4 class="text-xl mt-5">Mango</h4>
+                    </div>
+                </div>
+            </div>
         </section>
 
-
         <!-- Countdown Section  -->
-        <section class="pt-20 pb-10">
+        <section class="pt-20 lg:pt-0 pb-10">
             <div class="container mx-auto flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1
@@ -445,8 +470,11 @@
         <section class="my-20">
             <div class="container mx-auto bg-[url('./images/team.png')] bg-no-repeat bg-center bg-cover">
                 <div class="py-20 bg-black-rgba-06 text-white">
-                    <h1 class="font-Garamond font-extrabold text-4xl lg:text-5xl loading-[5rem] text-center">Meet the team section</h1>
-                    <p class="text-base my-5 w-3/4 lg:w-3/4 mx-auto text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <h1 class="font-Garamond font-extrabold text-4xl lg:text-5xl loading-[5rem] text-center">Meet the
+                        team section</h1>
+                    <p class="text-base my-5 w-3/4 lg:w-2/4 mx-auto text-center">Contrary to popular belief, is not
+                        simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it
+                        over 2000 years old.</p>
 
                     <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-16 gap-x-0 mt-14">
                         <div class="text-center">
@@ -456,13 +484,16 @@
                             <div class="social mt-5">
                                 <ul class="flex justify-center items-center gap-4">
                                     <li>
-                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary" target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -474,13 +505,16 @@
                             <div class="social mt-5">
                                 <ul class="flex justify-center items-center gap-4">
                                     <li>
-                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary" target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -492,13 +526,16 @@
                             <div class="social mt-5">
                                 <ul class="flex justify-center items-center gap-4">
                                     <li>
-                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary" target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -510,13 +547,16 @@
                             <div class="social mt-5">
                                 <ul class="flex justify-center items-center gap-4">
                                     <li>
-                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary" target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                        <a class="py-[10px] px-[14px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
                                     </li>
                                     <li>
-                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary" target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a class="py-[10px] px-[12px] text-xs text-white rounded-full bg-color-primary"
+                                            target="_blank" href=""><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -529,13 +569,155 @@
         </section>
 
 
+        <!-- Choose Us Section  -->
+        <section class="pb-20">
+            <div class="container mx-auto">
+
+                <h1 class="font-Garamond font-extrabold text-4xl lg:text-5xl loading-[5rem] text-center">Why Choose Us
+                </h1>
+                <p class="text-base my-5 w-3/4 lg:w-2/4 mx-auto text-center">Contrary to popular belief, is not simply
+                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
+                    years old.</p>
+
+                <div class="flex gap-5 mt-14 flex-col lg:flex-row justify-center items-center p-4">
+
+                    <div class="order-2 lg:order-none flex-1">
+                        <div class=" text-center lg:text-left flex gap-4 flex-col lg:flex-row">
+                            <div>
+                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                    src="./icons/group1.png" alt="Team Icon">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-extrabold">Dedicated Team</h3>
+                                <div class="w-24 h-[1px] bg-gray-400 my-2 inline-block"></div>
+                                <p class="text-base">Professional employees are there for you to pick the most amazing
+                                    and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class=" text-center lg:text-left flex gap-4 flex-col lg:flex-row mt-8">
+                            <div>
+                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                    src="./icons/love1.png" alt="Team Icon">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-extrabold">Fresh is Best</h3>
+                                <div class="w-24 h-[1px] bg-gray-400 my-2 inline-block"></div>
+                                <p class="text-base">Professional employees are there for you to pick the most amazing
+                                    and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class=" text-center lg:text-left flex gap-4 flex-col lg:flex-row mt-8">
+                            <div>
+                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                    src="./icons/gift-box1.png" alt="Team Icon">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-extrabold">Gift Certificates</h3>
+                                <div class="w-24 h-[1px] bg-gray-400 my-2 inline-block"></div>
+                                <p class="text-base">Professional employees are there for you to pick the most amazing
+                                    and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="img order-1 lg:order-none flex-1">
+                        <img class="w-full" src="./images/whychoose1.png" alt="Why choose us image">
+                    </div>
+
+                    <div class="order-3 lg:order-none flex-1">
+                        <div class="gap-4 text-center flex flex-col lg:text-right lg:flex-row-reverse">
+                            <div>
+                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                    src="./icons/fruit1.png" alt="Team Icon">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-extrabold">Integrated Supplier</h3>
+                                <div class="w-24 h-[1px] bg-gray-400 my-2 inline-block"></div>
+                                <p class="text-base">Professional employees are there for you to pick the most amazing
+                                    and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class="gap-4 text-center flex flex-col lg:text-right lg:flex-row-reverse mt-8">
+                            <div>
+                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                    src="./icons/ice-cream1.png" alt="Team Icon">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-extrabold">Sustainable Practice</h3>
+                                <div class="w-24 h-[1px] bg-gray-400 my-2 inline-block"></div>
+                                <p class="text-base">Professional employees are there for you to pick the most amazing
+                                    and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class="gap-4 text-center flex flex-col lg:text-right lg:flex-row-reverse mt-8">
+                            <div>
+                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                    src="./icons/like1.png" alt="Team Icon">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-extrabold">The Benefits Only</h3>
+                                <div class="w-24 h-[1px] bg-gray-400 my-2 inline-block"></div>
+                                <p class="text-base">Professional employees are there for you to pick the most amazing
+                                    and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 
-    <footer>
+    <footer class="py-20 bg-[#121212]">
         <div class="container mx-auto">
-
-
-
+            <div>
+                <div class="flex justify-center items-center">
+                    <div>
+                        <img src="./images/logo.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="ml-4 text-4xl text-white font-bold">Fruit Burst</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="py-8">
+                <ul class="text-white flex gap-5 justify-center items-center flex-wrap">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">All Fruits</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">My Account</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="flex justify-center items-center gap-7">
+                    <li>
+                        <a class="text-2xl text-white rounded-full" target="_blank" href="#"><i
+                                class="fa-brands fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a class="text-2xl text-white rounded-full" target="_blank" href=""><i
+                                class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a class="text-2xl text-white rounded-full" target="_blank" href=""><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a class="text-2xl text-white rounded-full" target="_blank" href=""><i
+                                class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
+                    <li>
+                        <a class="text-2xl text-white rounded-full" target="_blank" href=""><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a class="text-2xl text-white rounded-full" target="_blank" href=""><i
+                                class="fa-brands fa-apple"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
