menu z index fixed and box shadow added

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                                     d="M4 6h16M4 12h16M4 18h16"></path>
                             </svg>
                         </label>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 bg-color-primary rounded-t-none rounded-b-lg w-52">
+                        <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[20] p-2 bg-color-primary rounded-t-none rounded-b-lg w-52">
                             <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5"
                                     href="#">Home</a></li>
                             <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5"
@@ -165,7 +164,7 @@
 
             
             <div class="container mx-auto hidden lg:block">
-                <div class="flex justify-evenly w-10/12 mx-auto bg-white py-16 relative bottom-20">
+                <div class="flex justify-evenly w-10/12 mx-auto bg-white py-16 relative bottom-20 shadow-md rounded-2xl">
                     <div class="text-center">
                         <img class="inline-block" src="./images/fruit1.png" alt="">
                         <h4 class="text-xl mt-5">Grapes</h4>
